[gd_scene load_steps=6 format=3 uid="uid://b7o2cmo4lhoma"]

[ext_resource type="Script" path="res://scripts/entities_scripts/enemies_scripts/base_enemy.gd" id="1_e24kv"]
[ext_resource type="PackedScene" uid="uid://du2d3fhraj8fe" path="res://entities/enemies/enemy_specifics/nousagi.tscn" id="2_c5ne0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0wb7"]
size = Vector2(22, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_528bm"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l12kd"]
radius = 35.0

[node name="BaseEnemy" type="CharacterBody2D"]
script = ExtResource("1_e24kv")

[node name="MovementHitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_a0wb7")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_528bm")

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_l12kd")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.337255, 0.211765, 1)
z_index = 1
offset_left = -11.0269
offset_top = -23.2635
offset_right = 209.973
offset_bottom = 3.73645
scale = Vector2(0.1, 0.1)
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Nousagi" parent="." instance=ExtResource("2_c5ne0")]
